--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "my-v0-project",
+  "name": "fuelform-platform",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint",
-    "start": "next start"
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "analyze": "ANALYZE=true npm run build",
+    "db:generate": "supabase gen types typescript --project-id YOUR_PROJECT_ID > types/supabase.ts",
+    "db:reset": "supabase db reset",
+    "db:seed": "supabase db seed",
+    "deploy:preview": "vercel",
+    "deploy:production": "vercel --prod",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -50,9 +62,9 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
-    "react": "^19",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -62,12 +74,19 @@
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
+  "overrides": {
+    "react-day-picker": {
+      "date-fns": "$date-fns"
+    }
+  },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@next/bundle-analyzer": "^14.0.0",
+    "next-sitemap": "^4.2.3"
   }
 }
